Removed attributes
