# backend/docs/api.yaml
@@ -469,92 +469,7 @@ paths:
                   "type": "NOT_FOUND",
                   "message": "User ... with plant ... not found"
                 }
-  /attribute/{username}/{plantName}:
-    get:
-      tags:
-        - Attributes
-      summary: Returns the latest attributes of a plant
-      description: This route will return either the latest attributes of a plant or a NOT_FOUND error message if the user or the plant don't exist
-      parameters:
-        - in: path
-          name: username
-          schema:
-            type: string
-          required: true
-          description: The username of the user
-        - in: path
-          name: plantName
-          schema:
-            type: string
-          required: true
-          description: The name of the plant
-      responses:
-        '200':
-          description: A JSON object with the latest attributes attached to the requested plant
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Attribute"
-        404:
-          description: A NOT_FOUND error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/NOT_FOUND"
-              example:
-                {
-                  "type": "NOT_FOUND",
-                  "message": "User ... with plant ... not found"
-                }
-    post:
-      tags:
-        - Attributes
-      summary: Add a new attribute to a plant
-      description: This route will return an OK message if it was added successfully or a NOT_FOUND error message if the user or the plant don't exist
-      parameters:
-        - in: path
-          name: username
-          schema:
-            type: string
-          required: true
-          description: The username of the user
-        - in: path
-          name: plantName
-          schema:
-            type: string
-          required: true
-          description: The name of the plant
-      requestBody:
-        description: The data needed to construct a new attribute object
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Attribute"
-      responses:
-        200:
-          description: An OK message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/OK"
-              example:
-                {
-                  "type": "OK",
-                  "message": "Attribute added"
-                }
-        404:
-          description: A NOT_FOUND error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/NOT_FOUND"
-              example:
-                {
-                  "type": "NOT_FOUND",
-                  "message": "User ... with plant ... not found"
-                }
-
+    
 components:
   schemas:
     Attribute:
